RESOLVED FIXED300769
AX: missing null-check in accessibilityRootObjectWrapper
https://bugs.webkit.org/show_bug.cgi?id=300769
Summary AX: missing null-check in accessibilityRootObjectWrapper
Joshua Hoffman
Reported 2025-10-14 19:47:52 PDT
.
Attachments
Joshua Hoffman
Comment 1 2025-10-14 19:47:55 PDT
Joshua Hoffman
Comment 2 2025-10-14 19:50:19 PDT
EWS
Comment 3 2025-10-15 09:28:02 PDT
Committed 301565@main (be9363aab546): <https://commits.webkit.org/301565@main> Reviewed commits have been landed. Closing PR #52361 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.