AX: missing null-check in accessibilityRootObjectWrapper https://bugs.webkit.org/show_bug.cgi?id=300769 rdar://162078926

Reviewed by Tyler Wilcock.

We need to null check `frame` since `focusedLocalFrame` may return a nullptr.

* Source/WebKit/WebProcess/WebPage/mac/WKAccessibilityWebPageObjectBase.mm:
(-[WKAccessibilityWebPageObjectBase accessibilityRootObjectWrapper:]):

Canonical link: https://commits.webkit.org/301565@main